src/test/ui/moves/move-into-dead-array-1.stderr
error[E0381]: use of possibly-uninitialized variable: `a`
  --> $DIR/move-into-dead-array-1.rs:14:5
   |
LL |     a[i] = d();
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |     ^^^^ use of possibly uninitialized `a`
=======
   |     ^^^^ use of possibly-uninitialized `a`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
